@@ -2,6 +2,8 @@ package com.chattr.server.config;
 
 import com.chattr.server.utils.JwtAuthenticationFilter;
 import jakarta.servlet.http.HttpServletResponse;
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,66 +19,70 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
-
 /**
- * Security configuration for the application.
- * Configures CORS, JWT authentication filter, public/private routes, and password encoding.
+ * Security configuration for the application. Configures CORS, JWT authentication filter,
+ * public/private routes, and password encoding.
  */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    @Value("${cors.allowed-origins}")
-    private String allowedOrigins;
+  @Value("${cors.allowed-origins}")
+  private String allowedOrigins;
 
-    @Value("${security.public-urls}")
-    private String[] publicUrls;
+  @Value("${security.public-urls}")
+  private String[] publicUrls;
 
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+  private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    public SecurityConfig(@Lazy JwtAuthenticationFilter jwtAuthenticationFilter) {
-        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
-    }
+  public SecurityConfig(@Lazy JwtAuthenticationFilter jwtAuthenticationFilter) {
+    this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+  }
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .cors(cors -> cors.configurationSource(corsConfig()))
-                .csrf(AbstractHttpConfigurer::disable)
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(publicUrls).permitAll() // Publicly accessible endpoints
-                        .requestMatchers("/tmf/server/api/223_v2/**").authenticated() // Protected API path
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Allow pre-flight requests
-                        .anyRequest().permitAll() // Allow all other requests (adjust as needed)
-                )
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                .logout(AbstractHttpConfigurer::disable)
-                .exceptionHandling(exception -> exception.authenticationEntryPoint((request, response, authException) -> {
-                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                    response.setContentType("text/plain");
-                    response.getWriter().write("Unauthorized Access");
-                }));
+  @Bean
+  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    http.cors(cors -> cors.configurationSource(corsConfig()))
+        .csrf(AbstractHttpConfigurer::disable)
+        .authorizeHttpRequests(
+            auth ->
+                auth.requestMatchers(publicUrls)
+                    .permitAll() // Publicly accessible endpoints
+                    .requestMatchers("/tmf/server/api/223_v2/**")
+                    .authenticated() // Protected API path
+                    .requestMatchers(HttpMethod.OPTIONS, "/**")
+                    .permitAll() // Allow pre-flight requests
+                    .anyRequest()
+                    .permitAll() // Allow all other requests (adjust as needed)
+            )
+        .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+        .logout(AbstractHttpConfigurer::disable)
+        .exceptionHandling(
+            exception ->
+                exception.authenticationEntryPoint(
+                    (request, response, authException) -> {
+                      response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                      response.setContentType("text/plain");
+                      response.getWriter().write("Unauthorized Access");
+                    }));
 
-        return http.build();
-    }
+    return http.build();
+  }
 
-    @Bean
-    public CorsConfigurationSource corsConfig() {
-        return request -> {
-            CorsConfiguration config = new CorsConfiguration();
-            config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-            config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-            config.setAllowedHeaders(List.of("*"));
-            config.setExposedHeaders(List.of("Authorization", "Content-Type"));
-            config.setAllowCredentials(true);
-            return config;
-        };
-    }
+  @Bean
+  public CorsConfigurationSource corsConfig() {
+    return request -> {
+      CorsConfiguration config = new CorsConfiguration();
+      config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+      config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+      config.setAllowedHeaders(List.of("*"));
+      config.setExposedHeaders(List.of("Authorization", "Content-Type"));
+      config.setAllowCredentials(true);
+      return config;
+    };
+  }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(8);
-    }
+  @Bean
+  public PasswordEncoder passwordEncoder() {
+    return new BCryptPasswordEncoder(8);
+  }
 }
